--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "typescript": "^5.6.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
+  },
+  "devDependencies": {
+    "@iconify-json/mdi": "^1.2.3"
   }
 }
