change linkedin button link

--- a/content/sections/footer.yml
+++ b/content/sections/footer.yml
@@ -3,4 +3,4 @@ icons:
   - icon: mdi:github
     url: https://github.com/clay-369
   - icon: mdi:linkedin
-    url: https://www.linkedin.com/in/clayton-sumter-101834241/?originalSubdomain=nl
+    url: https://www.linkedin.com/in/clayton-sumter-101834241
