--- a/content/about/about.yml
+++ b/content/about/about.yml
@@ -1,12 +1,12 @@
 sections:
-  - title: Over mij
+  - title: Introductie
     description: Clayton Sumter is een 21-jarige student met een passie voor het ontwikkelen van websites en apps. Clayton Houdt van sporten, lezen en programmeren. Hij is begonnen met het ontwikkelen van software door interesse in computers. Clayton is leergierig en heeft veel doorzettinsgvermogen, niet alleen achter zijn toetsenbord en IDE, maar ook op het basketbalveld! Clayton is vanaf jongs af aan al een sportfanaat. Hij houdt van teamsporten zoals basketball en voetbal. Werken in en als een team is voor Clayton heel belangrijk. Comunnicatie staat op nummer 1 voor Clayton!
   - title: Werkervaring
     description: Over mijn werkervaring
     list:
       - Full Stack Developer
       - Test Automation Engineer
-      - AI tool development
+      - AI tools developer
   - title: Passies en Interesses
     description: Over mijn passies en interesses
     list:
@@ -21,6 +21,11 @@ sections:
     list:
       - 21 jaar
       - Geboren en opgegroeid in Rotterdam
+      - Woonachtig in Rotterdam
+      - Student Software Development op de Hogeschool Rotterdam
+      - Nederlands als moedertaal
+      - Goede beheersing van Engels
+      - In bezit van rijbewijs B
   - title: Missie of Doelstellingen
     description: Over mijn missie of doelstellingen
     list:
